--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,13 +1,13 @@
 <% layout("/layouts/boilerplate") %>
     <div class="row mt-3">
       <div class="col-heading  col-8 offset-3">
-        <h3>Show Linsting</h3>
+        <h3><%=showall.title%></h3>
     </div>
     <div class="card-all col-6 offset-3">
     <div class="card">
       <img class="show-image card-img-top" src="<%=showall.image.url%>" alt="image"/>
       <div class="card-body">
-        <p class="card-text"><b>Title:</b><%=showall.title%><br>
+        <br>
         <b>Description:</b><%=showall.description%><br>
         <b>Price: </b>&#8377; <%=showall.price.toLocaleString("en-IN") %><br>
         <b>location:</b><%=showall.location%><br>
@@ -22,8 +22,45 @@
         <button class="btn btn-dark offset-5">Delete</button>
       </form>
       </div>
+      <br><br><br>
+      <hr>
+      <div class="col-8 offset-3 mb-3">
+        <h3>Leave a Review</h3>
+        <form method="post" action="/listings/<%=showall.id%>/reviews" class="mt-3 needs-validation" novalidate >
+          <div>
+        <label for="rating" class="form-label">Rating</label>
+        <input type="range" name="review[rating]" id="rating" min="1" max="5"  />
         </div>
-      <br>
+        <div class="mt-3">
+          <label for="comment" class="form-label">Comment</label>
+          <textarea name="review[comment]" id="comment" cols="5" rows="4" placeholder="Write a comment"  class="form-control " required></textarea>
+          <div class="invalid-feedback">Please leave a comment</div>
+          <br>
+          <button class="btn btn-outline-dark">Submit</button>
+        </div>
+        </form>
+      
+      <hr>
+      
+        <p><b>All Reviews</b></p>
+        <div class="row">
+        <% for(review of showall.reviews){ %>
+           <div class="card col-5 ms-4 mb-1 card-review">
+            <div class="card-body">
+              <h5 class="card-title">Joi lin</h5>
+             <p class="card-text"><%=review.comment%></p>
+             <p class="card-text"><%=review.rating%> Stars</p>
+             <form class="mb-2" method="post" action="/listings/<%=showall._id%>/reviews/<%=review._id%>?_method=DELETE">
+              <button class="btn btn-sm btn-dark">Delete</button>
+             </form>
+            </div>
+           </div>
+           <%}%>
+        </div>
+      </div>
+      </div>
+        
+      
    
     
     
