--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -14,7 +14,15 @@
         <a class="nav-link "  href="/">Home</a>
         <a class="nav-link" href="/listings">All listings</a>
         <a class="nav-link" href="/listings/new">Add new listing</a>
-        
+      </div>
+      <div class="navbar-nav ms-auto">
+        <%if(!reqUser){%>
+          <a class="nav-link "  href="/signup">Signup</a>
+        <a class="nav-link" href="/login">Log in</a>
+        <%}%>
+        <% if(reqUser){ %>
+        <a class="nav-link" href="/logout">Logout</a>
+        <%}%>
       </div>
     </div>
   </div>
