--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -8,23 +8,27 @@
       <img class="show-image card-img-top" src="<%=showall.image.url%>" alt="image"/>
       <div class="card-body">
         <br>
-        <b>Description:</b><%=showall.description%><br>
-        <b>Price: </b>&#8377; <%=showall.price.toLocaleString("en-IN") %><br>
-        <b>location:</b><%=showall.location%><br>
-        <b>country:</b><%=showall.country%><br>
+        <p><b>Owned by: </b><i><%=showall.owner.username%></i></p>
+        <p><b>Description:</b><%=showall.description%></p> 
+        <p><b>Price: </b>&#8377; <%=showall.price.toLocaleString("en-IN") %></p>
+        <p><b>location:</b><%=showall.location%></p>
+        <p><b>country:</b><%=showall.country%></p>
         </p>
         </div>
            </div>
            </div>
+          <% if(reqUser && reqUser._id.equals(showall.owner._id)){%> 
       <div class="btns-edit-delete">
       <a href="/listings/<%=showall._id%>/edit" class="btn btn-dark col-1 offset-3 editbtn" >Edit</a>
       <form method="post" action="/listings/<%=showall._id%>?_method=DELETE" >
         <button class="btn btn-dark offset-5">Delete</button>
       </form>
       </div>
+      <%}%>
       <br><br><br>
       <hr>
       <div class="col-8 offset-3 mb-3">
+        <%if(reqUser){%>
         <h3>Leave a Review</h3>
         <form method="post" action="/listings/<%=showall.id%>/reviews" class="mt-3 needs-validation" novalidate >
           <div>
@@ -39,7 +43,7 @@
           <button class="btn btn-outline-dark">Submit</button>
         </div>
         </form>
-      
+       <%}%>
       <hr>
       
         <p><b>All Reviews</b></p>
@@ -47,12 +51,14 @@
         <% for(review of showall.reviews){ %>
            <div class="card col-5 ms-4 mb-1 card-review">
             <div class="card-body">
-              <h5 class="card-title">Joi lin</h5>
+              <h6 class="card-title mt-1">@<%=review.author.username%></h6>
              <p class="card-text"><%=review.comment%></p>
              <p class="card-text"><%=review.rating%> Stars</p>
+             <%if(review.author && reqUser && review.author._id.equals(reqUser._id)){%>
              <form class="mb-2" method="post" action="/listings/<%=showall._id%>/reviews/<%=review._id%>?_method=DELETE">
               <button class="btn btn-sm btn-dark">Delete</button>
              </form>
+             <%}%>
             </div>
            </div>
            <%}%>
