Prepare StaySphere for deployment with full feature set

--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -2,7 +2,7 @@
     <div class="f-info">
         <div class="f-info-socials">
             <i class="fa-brands fa-square-facebook"></i>
-            <i class="fa-brands fa-square-instagram"></i>
+            <a class="intaGram" href="https://www.instagram.com/stay_sphere__/" ><i class="fa-brands fa-square-instagram"></i></a>
             <i class="fa-brands fa-square-linkedin"></i>
         </div>
         <div class="f-info-company">&copy StaySphere private Limited</div>
