--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,27 +1,34 @@
-<nav class="navbar navbar-expand-md bg-body-light border-bottom sticky-top">
+<nav class="navbar navbar-expand-lg bg-white border-bottom sticky-top">
   <div class="container-fluid">
-   <a class="navbar-brand d-flex align-items-center" href="/">
-  <img src="/image/logo-icon.png" alt="StaySphere" class="logo-icon me-2">
+   <a class="navbar-brand d-flex align-items-center" href="/listings">
+  <img src="/image/logo-icon2.png" alt="StaySphere" class="logo-icon me-2">
   <span class="logo-text">
     <span class="logo-stay">Stay</span><span class="logo-sphere">Sphere</span>
   </span>
 </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" >
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"  >
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link "  href="/">Home</a>
-        <a class="nav-link" href="/listings">All listings</a>
-        <a class="nav-link" href="/listings/new">Add new listing</a>
+        <a class="nav-link" href="/listings">Explore</a>
       </div>
+
+        <div class="search-wrapper ms-auto">
+    <form method="get" class="d-flex" role="search" action="/listings">
+      <input class="form-control me-2 search-bar" type="search" placeholder="Search destinations" name="q" aria-label="Search"/>
+      <button  class="btn btn-outline search-btn" type="submit"><i class="fa-solid fa-magnifying-glass"></i>Search</button>
+     </form>
+         </div>  
+
       <div class="navbar-nav ms-auto">
+         <a class="nav-link" href="/listings/new">Add new listing</a>
         <%if(!reqUser){%>
-          <a class="nav-link "  href="/signup">Signup</a>
-        <a class="nav-link" href="/login">Log in</a>
+          <a class="nav-link "  href="/signup"><b>Signup</b></a>
+        <a class="nav-link" href="/login"><b>Log in</b></a>
         <%}%>
         <% if(reqUser){ %>
-        <a class="nav-link" href="/logout">Logout</a>
+        <a class="nav-link" href="/logout"><b>Logout</b></a>
         <%}%>
       </div>
     </div>
