--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,15 +8,46 @@ body {
 
 .container{
     flex: 1;
-    padding-top: 1rem;
+    padding-top: 0.2rem;
 }
 
 /* nav bar */
 .navbar{
-    height: 5rem;
+    min-height: 5rem ;
     background-color: white;
     padding-top: 0.7rem;
     padding-bottom: 0.7rem;
+}
+
+.navbar-toggler{
+    border: none;
+
+}
+
+.navbar-toggler-icon {
+  width: 1.4rem !important;
+  height: 1.4rem !important;
+}
+
+.navbar-toggler:focus{
+    box-shadow: 1px 1px 6px black !important;
+
+}
+
+@media (max-width: 991px){
+    .navbar-collapse{
+        background-color: #f2f2f2;
+        border-radius: 10px;
+        padding-left:1rem ;
+        border-top: 1px solid #eee;
+        width: 4rem;
+    }
+    
+}
+
+.navbar .nav-link{
+    padding: 0.6rem 3rem;
+    font-size: 1rem;
 }
 
 .navbar-brand {
@@ -38,6 +69,7 @@ body {
   display: flex !important;
   align-items: center !important;
   height: 100% !important;
+  font-weight: 500;
 }
 
 
@@ -59,6 +91,11 @@ body {
 }
 .f-info-links{
     width: 100%;
+}
+
+.f-info-socials a{
+    text-decoration:none;
+    color: #222222;
 }
 
 
@@ -131,6 +168,10 @@ body {
     border: none !important;
 }
 
+.editUpImG img{
+    border-radius: 20px 0 20px 0;
+}
+
 /* show */
 .show-image{
      height: 30vh; 
@@ -156,15 +197,17 @@ body {
 /* logo */
 
 .logo-icon {
-  height: 36px;
-  width: 36px;
+  height: 30px;
+  width: 30px;
   border-radius: 50%;
   object-fit: cover;
-
+  
 }
 
 .logo-text {
-  font-size: 1.6rem;
+    display: flex;
+    text-align: center;
+  font-size: 1.2.5rem;
   font-weight: 800;
   letter-spacing: 0.6px;
   line-height: 1;
@@ -182,3 +225,132 @@ body {
 .card-review{
     border: 0.5px solid #222222 !important;
 }
+
+/* login-form */
+.login-form{
+    border: 1px solid #222222;
+    padding: 2rem 1rem;
+    background-color: white;
+    border-radius: 20px;
+}
+.form-body{
+    background-color: whitesmoke;
+}
+
+/* Filter icons  */
+     #filters{
+        margin-top: 1rem;
+        display: flex;
+        text-align: center;
+         
+        
+   }
+    .filters-container{
+         display: flex;
+         column-gap: 1rem;
+      overflow-x: auto;
+      scroll-behavior:smooth;
+      padding: 0.4rem 0.1rem;
+      scrollbar-width:none;
+      flex: 2;
+      
+    }
+    .filter{
+         min-width: 75px;
+  text-align: center;
+  opacity: 0.6;
+  transition: 0.2s ease;
+  color: #222;
+  text-decoration: none;
+    }
+    .filter:hover{
+        opacity: 1;
+         transform: scale(1.05);
+    }
+
+    .filters-wrapper {
+ position: relative;
+  display: flex;
+  align-items: center;
+  margin: 0.2rem 0;
+  margin-bottom: -2rem !important;
+  /* width: 80%; */
+}
+.filters::-webkit-scrollbar {
+  display: none;  
+}
+    .filter p{
+        font-size: 0.8rem;
+        text-align: center;
+
+    }
+
+    .scroll-btn{
+         flex-shrink: 0;
+         font-size: 9px;
+         width: 24px;
+         height: 24px;
+         border-radius: 50%;
+         border: 1px solid #ddd;
+         background: white;
+         box-shadow: 0 2px 8px rgba(0,0,0,0.15);
+         margin-bottom: 1.9rem;
+    }
+
+    .tax-toggle{
+        
+           border: 1px solid #222222;
+           border-radius: 10px;
+           height: 30px;
+           padding: 0.4rem;        
+           display: flex ;
+           align-items: center;
+           white-space: nowrap ;
+           font-size: 0.9rem ;
+           margin-left: 6rem;
+           margin-right: 1.5rem;
+           margin: 0 1.6rem 1.8rem 6rem !important;
+}
+  
+ 
+@media (max-width: 768px) {
+  .filters-wrapper {
+    flex-wrap: wrap;
+  }
+
+  .tax-toggle {
+    width: 100%;
+    margin-top: 0.5rem;
+    display: flex;
+    justify-content: flex-end;
+    font-size: 0.85rem;
+  }
+
+  .scroll-btn {
+    display: none; 
+  }
+}
+
+
+/* search-bar */
+.search-btn{
+    background-color: #20c997 !important;
+    color: white !important;
+    border-radius: 20px !important;
+    
+    
+}
+.search-btn i{
+    display: inline;
+    margin-right: 0.5rem;
+}
+
+.search-bar{
+    border-radius: 20px !important;
+    
+    text-align: center;
+    font-size: 0.9rem !important;
+    padding: 0.5rem 3.5rem 0.5rem 3.5rem !important;
+}
+
+
