--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -3,7 +3,7 @@
     <div class="row mt-3">
            <div class="col-6 offset-3">
     <h3>Create new Listings</h3>
-    <form method="post" action="/listings" novalidate class="needs-validation">
+    <form method="post" action="/listings" novalidate class="needs-validation" enctype="multipart/form-data">
         <div class="mb-3">
             <label for="title" class="form-label">Title:</label>
         <input type="text" name="listing[title]" placeholder="--Enter Tilte--" class="form-control" id="title" required/>
@@ -17,8 +17,8 @@
         <div class="invalid-feedback">Please Enter some description</div>
         </div>
         <div class="mb-3">
-             <lable for="image_url" class="form-label">Image:</lable>
-        <input type="text" name="listing[image][url]" placeholder="Enter image url" class="form-control" id="image_url"/>
+             <lable for="image" class="form-label">Upload image</lable>
+        <input type="file" name="listing[image]" class="form-control" id="image"/>
          <!-- <div class="valid-feedback">Image submitted</div>
         <div class="invalid-feedback">Please submit image</div> -->
         </div>
@@ -38,13 +38,32 @@
         </div>
     
         </div>
-        <div class="mb-3">
+        <div class="row">
+        <div class="mb-3 col-md-7">
             <lable for="country" class="form-label">Country:</lable>
         <input type="text" name="listing[country]" placeholder="Enter country" class="form-control" id="country" required/>
          <div class="valid-feedback">Country selected</div>
         <div class="invalid-feedback">Please Enter the Country</div>
+         </div>
+        <div class="dropdown-center mb-3  col-md-5">
+            <label for="dropdown-category" class="form-label"></label>
+        <select class="btn btn-light form-select" type="button" id="dropdown-category" name="listing[category]">
+            <option value="" selected disabled >Select category</option>
+            <option value="Rooms">Rooms</option>
+            <option value="Iconic City">Iconic City</option>
+            <option value="Mountains">Mauntains</option>
+            <option value="Castles">Castles</option>
+            <option value="Amazing Pools">Amazing Pools</option>
+            <option value="Camping">Camping</option>
+            <option value="Farms">Farms</option>
+            <option value="Arctice">Arctice</option>
+        </select>
+        
+         </div>
+         </div>
+         <button class="btn btn-dark newbtn">Add</button>
         </div><br>
-        <button class="btn btn-dark newbtn">Add</button>
+        
         </div>
         </div>
         <br>
