Add Mapbox map and property details to listings

--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -17,6 +17,10 @@
         <div class="invalid-feedback">Please Enter some description</div>
         </div>
         <div class="mb-3">
+            <label for="proprty" class="form-label">Property details</label>
+            <textarea name="listing[propertyDetail]" placeholder="Enter all about property" cols="7" class="form-control" id="proprty"></textarea>
+        </div>
+        <div class="mb-3">
              <lable for="image" class="form-label">Upload image</lable>
         <input type="file" name="listing[image]" class="form-control" id="image"/>
          <!-- <div class="valid-feedback">Image submitted</div>
