--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,62 +1,61 @@
-
 body {
-  font-family: "Plus Jakarta Sans", sans-serif !important;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
+    font-family: "Plus Jakarta Sans", sans-serif !important;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
-.container{
+.container {
     flex: 1;
     padding-top: 0.2rem;
 }
 
 /* nav bar */
-.navbar{
-    min-height: 5rem ;
+.navbar {
+    min-height: 5rem;
     background-color: white;
     padding-top: 0.7rem;
     padding-bottom: 0.7rem;
 }
 
-.navbar-toggler{
+.navbar-toggler {
     border: none;
 
 }
 
 .navbar-toggler-icon {
-  width: 1.4rem !important;
-  height: 1.4rem !important;
+    width: 1.4rem !important;
+    height: 1.4rem !important;
 }
 
-.navbar-toggler:focus{
+.navbar-toggler:focus {
     box-shadow: 1px 1px 6px black !important;
 
 }
 
-@media (max-width: 991px){
-    .navbar-collapse{
+@media (max-width: 991px) {
+    .navbar-collapse {
         background-color: #f2f2f2;
         border-radius: 10px;
-        padding-left:1rem ;
+        padding-left: 1rem;
         border-top: 1px solid #eee;
         width: 4rem;
     }
-    
+
 }
 
-.navbar .nav-link{
+.navbar .nav-link {
     padding: 0.6rem 3rem;
     font-size: 1rem;
 }
 
 .navbar-brand {
-  display: flex;
-  align-items: center;
+    display: flex;
+    align-items: center;
 }
 
 
-.fa-compass{
+.fa-compass {
     color: #fe424d;
     font-size: 2rem;
 }
@@ -66,51 +65,52 @@ body {
 } */
 
 .navbar-nav .nav-link {
-  display: flex !important;
-  align-items: center !important;
-  height: 100% !important;
-  font-weight: 500;
+    display: flex !important;
+    align-items: center !important;
+    height: 100% !important;
+    font-weight: 500;
 }
 
 
 /* footer */
-.f-info-links a{
+.f-info-links a {
     text-decoration: none;
     color: #222222;
-    
+
 }
 
-.f-info-links a:hover{
+.f-info-links a:hover {
     text-decoration: underline;
 }
 
-.f-info-socials{
+.f-info-socials {
     width: 100%;
     font-size: 1.2rem;
     user-select: none;
 }
-.f-info-links{
+
+.f-info-links {
     width: 100%;
 }
 
-.f-info-socials a{
-    text-decoration:none;
+.f-info-socials a {
+    text-decoration: none;
     color: #222222;
 }
 
 
-.f-info-socials i{
+.f-info-socials i {
     margin: 0 0.5rem;
     cursor: pointer;
     transition: transform 0.2s ease;
 }
 
-.f-info-socials i:hover{
+.f-info-socials i:hover {
     transform: scale(1.15);
 }
 
 
-.f-info{
+.f-info {
     background-color: #f2f2f2;
     height: auto;
     display: flex;
@@ -121,236 +121,251 @@ body {
     text-align: center;
     padding: 1.5rem 0;
     gap: 0.5rem;
-    
+
 
 }
 
 /* card */
-.card{
-   border: none !important;
+.card {
+    border: none !important;
     margin: 1rem !important;
-    
+
 }
 
-.card-img-top{
+.card-img-top {
     border-radius: 1rem !important;
     width: 100% !important;
 }
 
-.card-body{
+.card-body {
     padding: 0 !important;
 }
-.card-body p{
+
+.card-body p {
     font-weight: 400 !important;
 }
 
-.showcard{
+.showcard {
     text-decoration: none;
 }
 
-.card-img-overlay{
+.card-img-overlay {
     opacity: 0;
 }
-.card-img-overlay:hover{
+
+.card-img-overlay:hover {
     opacity: 0.2;
     background-color: white;
 }
 
 /* new */
-.newbtn{
+.newbtn {
     background-color: #fe424d !important;
     border: none !important;
 }
 
 /* Edit */
-.editbtn{
+.editbtn {
     background-color: #fe424d !important;
     border: none !important;
 }
 
-.editUpImG img{
+.editUpImG img {
     border-radius: 20px 0 20px 0;
 }
 
 /* show */
-.show-image{
-     height: 30vh; 
-     border-radius: 20px;
- } 
+.show-image {
+    height: 30vh;
+    border-radius: 20px;
+}
 
-.btns-edit-delete{
+.btns-edit-delete {
     display: flex !important;
     padding-left: 24px !important;
-    align-items: center ;
-    
-} 
+    align-items: center;
 
-.card-all{
-    padding-left: 0  !important;
+}
+
+.card-all {
+    padding-left: 0 !important;
     padding-right: 0 !important;
 }
 
-.col-heading{
+.col-heading {
     padding-left: 15px !important;
 }
 
 /* logo */
 
 .logo-icon {
-  height: 30px;
-  width: 30px;
-  border-radius: 50%;
-  object-fit: cover;
-  
+    height: 30px;
+    width: 30px;
+    border-radius: 50%;
+    object-fit: cover;
+
 }
 
 .logo-text {
     display: flex;
     text-align: center;
-  font-size: 1.2.5rem;
-  font-weight: 800;
-  letter-spacing: 0.6px;
-  line-height: 1;
+    font-size: 1.2.5rem;
+    font-weight: 800;
+    letter-spacing: 0.6px;
+    line-height: 1;
 }
 
 .logo-stay {
-  color: #0d6efd;   /* blue */
+    color: #0d6efd;
+    /* blue */
 }
 
 .logo-sphere {
-  color: #20c997;   /* teal */
+    color: #20c997;
+    /* teal */
 }
 
 /* reviews */
-.card-review{
+.card-review {
     border: 0.5px solid #222222 !important;
 }
 
 /* login-form */
-.login-form{
+.login-form {
     border: 1px solid #222222;
     padding: 2rem 1rem;
     background-color: white;
     border-radius: 20px;
 }
-.form-body{
+
+.form-body {
     background-color: whitesmoke;
 }
 
 /* Filter icons  */
-     #filters{
-        margin-top: 1rem;
-        display: flex;
-        text-align: center;
-         
-        
-   }
-    .filters-container{
-         display: flex;
-         column-gap: 1rem;
-      overflow-x: auto;
-      scroll-behavior:smooth;
-      padding: 0.4rem 0.1rem;
-      scrollbar-width:none;
-      flex: 2;
-      
-    }
-    .filter{
-         min-width: 75px;
-  text-align: center;
-  opacity: 0.6;
-  transition: 0.2s ease;
-  color: #222;
-  text-decoration: none;
-    }
-    .filter:hover{
-        opacity: 1;
-         transform: scale(1.05);
-    }
-
-    .filters-wrapper {
- position: relative;
-  display: flex;
-  align-items: center;
-  margin: 0.2rem 0;
-  margin-bottom: -2rem !important;
-  /* width: 80%; */
-}
-.filters::-webkit-scrollbar {
-  display: none;  
-}
-    .filter p{
-        font-size: 0.8rem;
-        text-align: center;
-
-    }
-
-    .scroll-btn{
-         flex-shrink: 0;
-         font-size: 9px;
-         width: 24px;
-         height: 24px;
-         border-radius: 50%;
-         border: 1px solid #ddd;
-         background: white;
-         box-shadow: 0 2px 8px rgba(0,0,0,0.15);
-         margin-bottom: 1.9rem;
-    }
-
-    .tax-toggle{
-        
-           border: 1px solid #222222;
-           border-radius: 10px;
-           height: 30px;
-           padding: 0.4rem;        
-           display: flex ;
-           align-items: center;
-           white-space: nowrap ;
-           font-size: 0.9rem ;
-           margin-left: 6rem;
-           margin-right: 1.5rem;
-           margin: 0 1.6rem 1.8rem 6rem !important;
-}
-  
- 
-@media (max-width: 768px) {
-  .filters-wrapper {
-    flex-wrap: wrap;
-  }
-
-  .tax-toggle {
-    width: 100%;
-    margin-top: 0.5rem;
+#filters {
+    margin-top: 1rem;
     display: flex;
-    justify-content: flex-end;
-    font-size: 0.85rem;
-  }
+    text-align: center;
 
-  .scroll-btn {
-    display: none; 
-  }
+
+}
+
+.filters-container {
+    display: flex;
+    column-gap: 1rem;
+    overflow-x: auto;
+    scroll-behavior: smooth;
+    padding: 0.4rem 0.1rem;
+    scrollbar-width: none;
+    flex: 2;
+
+}
+
+.filter {
+    min-width: 75px;
+    text-align: center;
+    opacity: 0.6;
+    transition: 0.2s ease;
+    color: #222;
+    text-decoration: none;
+}
+
+.filter:hover {
+    opacity: 1;
+    transform: scale(1.05);
+}
+
+.filters-wrapper {
+    position: relative;
+    display: flex;
+    align-items: center;
+    margin: 0.2rem 0;
+    margin-bottom: -2rem !important;
+    /* width: 80%; */
+}
+
+.filters::-webkit-scrollbar {
+    display: none;
+}
+
+.filter p {
+    font-size: 0.8rem;
+    text-align: center;
+
+}
+
+.scroll-btn {
+    flex-shrink: 0;
+    font-size: 9px;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    border: 1px solid #ddd;
+    background: white;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
+    margin-bottom: 1.9rem;
+}
+
+.tax-toggle {
+
+    border: 1px solid #222222;
+    border-radius: 10px;
+    height: 30px;
+    padding: 0.4rem;
+    display: flex;
+    align-items: center;
+    white-space: nowrap;
+    font-size: 0.9rem;
+    margin-left: 6rem;
+    margin-right: 1.5rem;
+    margin: 0 1.6rem 1.8rem 6rem !important;
+}
+
+
+@media (max-width: 768px) {
+    .filters-wrapper {
+        flex-wrap: wrap;
+    }
+
+    .tax-toggle {
+        width: 100%;
+        margin-top: 0.5rem;
+        display: flex;
+        justify-content: flex-end;
+        font-size: 0.85rem;
+    }
+
+    .scroll-btn {
+        display: none;
+    }
 }
 
 
 /* search-bar */
-.search-btn{
+.search-btn {
     background-color: #20c997 !important;
     color: white !important;
     border-radius: 20px !important;
-    
-    
+
+
 }
-.search-btn i{
+
+.search-btn i {
     display: inline;
     margin-right: 0.5rem;
 }
 
-.search-bar{
+.search-bar {
     border-radius: 20px !important;
-    
+
     text-align: center;
     font-size: 0.9rem !important;
     padding: 0.5rem 3.5rem 0.5rem 3.5rem !important;
 }
 
-
+/* map */
+#map {
+    height: 410px;
+    width: 100vh;
+}
