--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -15,6 +15,10 @@
         <div class="valid-feedback">Description okay</div>
         <div class="invalid-feedback">Please Enter some description</div>
         </div>
+        <div class="mb-3">
+            <label for="proprty" class="form-label">Property details</label>
+            <textarea name="listing[propertyDetail]" placeholder="Enter all about property" cols="7" class="form-control" id="proprty"><%=editlisting.propertyDetail%></textarea>
+        </div>
         <div class="editUpImG">
             Original Image <br>
             <img src="<%=originalListingUrl%>"/>
@@ -39,12 +43,29 @@
         <div class="invalid-feedback">Please Enter location</div>
         </div>
         </div>
-        <div class="mb-3">
+        <div class="row">
+        <div class="mb-3 col-md-7">
             <lable for="country" class="form-label">Country:</lable>
-        <input type="text" name="listing[country]" value="<%=editlisting.country%>" class="form-control" id="country" required/>
-        <div class="valid-feedback">Country selected</div>
+        <input type="text" name="listing[country]" placeholder="Enter country" class="form-control" id="country" value="<%=editlisting.country%>" required/>
+         <div class="valid-feedback">Country selected</div>
         <div class="invalid-feedback">Please Enter the Country</div>
-        </div>
+         </div>
+        <div class="dropdown-center mb-3  col-md-5">
+            <label for="dropdown-category" class="form-label"></label>
+        <select class="btn btn-light form-select" type="button" id="dropdown-category" name="listing[category]">
+            <option  value="<%=editlisting.category%>"><%=editlisting.category%></option> 
+            <option value="Rooms">Rooms</option>
+            <option value="Iconic City">Iconic City</option>
+            <option value="Mountains">Mauntains</option>
+            <option value="Castles">Castles</option>
+            <option value="Amazing Pools">Amazing Pools</option>
+            <option value="Camping">Camping</option>
+            <option value="Farms">Farms</option>
+            <option value="Arctice">Arctice</option>
+        </select>
+        
+         </div>
+         </div>
         
         <button class="btn btn-dark editbtn">Edit</button>
         </div>
