--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,81 +1,122 @@
 <% layout("/layouts/boilerplate") %>
-    <div class="row mt-3">
-      <div class="col-heading  col-8 offset-3">
-        <h3><%=showall.title%></h3>
+  <script>
+    const MapToken = "<%= process.env.MAPBOX_TOKEN %>";
+    const cordinates = <%- JSON.stringify( showall.geometry.coordinates) %>;
+  </script>
+  <div class="row mt-3">
+    <div class="col-heading  col-8 offset-2">
+      <h3>
+        <%=showall.title%>
+      </h3>
     </div>
     <div class="card-all col-6 offset-3">
-    <div class="card">
-      <img class="show-image card-img-top" src="<%=showall.image.url%>" alt="image"/>
-      <div class="card-body">
-        <br>
-        <p><b>Owned by: </b><i><%=showall.owner.username%></i></p>
-        <p><b>Description:</b><%=showall.description%></p> 
-        <p><b>Price: </b>&#8377; <%=showall.price.toLocaleString("en-IN") %></p>
-        <p><b>location:</b><%=showall.location%></p>
-        <p><b>country:</b><%=showall.country%></p>
-        </p>
-        </div>
-           </div>
-           </div>
-          <% if(reqUser && reqUser._id.equals(showall.owner._id)){%> 
-      <div class="btns-edit-delete">
-      <a href="/listings/<%=showall._id%>/edit" class="btn btn-dark col-1 offset-3 editbtn" >Edit</a>
-      <form method="post" action="/listings/<%=showall._id%>?_method=DELETE" >
-        <button class="btn btn-dark offset-5">Delete</button>
-      </form>
-      </div>
-      <%}%>
-      <br><br><br>
-      <hr>
-      <div class="col-8 offset-3 mb-3">
-        <%if(reqUser){%>
-        <h3>Leave a Review</h3>
-        <form method="post" action="/listings/<%=showall.id%>/reviews" class="mt-3 needs-validation" novalidate >
-          <div>
-        <label for="rating" class="form-label">Rating</label>
-        <fieldset class="starability-slot">
-          <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="1" checked aria-label="No rating." />
-          <input type="radio" id="first-rate1" name="review[rating]" value="1" />
-          <label for="first-rate1" title="Terrible">1 star</label>
-          <input type="radio" id="first-rate2" name="review[rating]" value="2" />
-          <label for="first-rate2" title="Not good">2 stars</label>
-          <input type="radio" id="first-rate3" name="review[rating]" value="3" />
-          <label for="first-rate3" title="Average">3 stars</label>
-          <input type="radio" id="first-rate4" name="review[rating]" value="4" />
-          <label for="first-rate4" title="Very good">4 stars</label>
-          <input type="radio" id="first-rate5" name="review[rating]" value="5" />
-          <label for="first-rate5" title="Amazing">5 stars</label>
-        </fieldset>
-        </div>
-        <div class="mt-2">
-          <label for="comment" class="form-label">Comment</label>
-          <textarea name="review[comment]" id="comment" cols="5" rows="4" placeholder="Write a comment"  class="form-control " required></textarea>
-          <div class="invalid-feedback">Please leave a comment</div>
+      <div class="card">
+        <img class="show-image card-img-top" src="<%=showall.image.url%>" alt="image" />
+        <div class="card-body">
           <br>
-          <button class="btn btn-outline-dark">Submit</button>
-        </div>
-        </form>
-       <%}%>
-      <hr>
-      
-        <p><b>All Reviews</b></p>
-        <div class="row">
-        <% for(review of showall.reviews){ %>
-           <div class="card col-5 ms-3 mb-1 card-review">
-            <div class="card-body">
-              <h6 class="card-title mt-1">@<%=review.author.username%></h6>
-              <p class="starability-result star-small card-text" 
-              data-rating="<%=review.rating%>"></p>   
-              <p class="card-text mb-1"><%=review.comment%></p>
-             <%if(review.author && reqUser && review.author._id.equals(reqUser._id)){%>
-             <form class="mb-2" method="post" action="/listings/<%=showall._id%>/reviews/<%=review._id%>?_method=DELETE">
-              <button class="btn btn-sm btn-dark">Delete</button>
-             </form>
-             <%}%>
-            </div>
-           </div>
-           <%}%>
+          <p><b>Owned by: </b><i>
+              <%=showall.owner.username%>
+            </i></p>
+          <p><b>Description:</b>
+            <%=showall.description%>
+          </p>
+          <p><b>Price: </b>&#8377; <%=showall.price.toLocaleString("en-IN") %></p>
+          <p><b>location:</b>
+            <%=showall.location%>
+          </p>
+          <p><b>country:</b>
+            <%=showall.country%>
+          </p>
+          
+          <div>
+            <%if(showall.propertyDetail.length>0){%>
+            <br>
+      <h6>More details</h6>
+      <p><b>Property details:</b></p>
+       <ul>
+       <% showall.propertyDetail.split(',').forEach(detail => { %>
+       <li><%= detail.trim() %></li>
+       <% }) %>
+         </ul>
+         <%}%>
+    </div>
         </div>
       </div>
     </div>
     
+    <% if(reqUser && reqUser._id.equals(showall.owner._id)){%>
+      <div class="btns-edit-delete">
+        <a href="/listings/<%=showall._id%>/edit" class="btn btn-dark col-1 offset-3 editbtn">Edit</a>
+        <form method="post" action="/listings/<%=showall._id%>?_method=DELETE">
+          <button class="btn btn-dark offset-5">Delete</button>
+        </form>
+      </div>
+      <%}%>
+        <br><br><br>
+        <hr>
+        <div class="col-8 offset-3 mb-3">
+          <%if(reqUser){%>
+            <h3>Leave a Review</h3>
+            <form method="post" action="/listings/<%=showall.id%>/reviews" class="mt-3 needs-validation" novalidate>
+              <div>
+                <label for="rating" class="form-label">Rating</label>
+                <fieldset class="starability-slot">
+                  <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="1" checked
+                    aria-label="No rating." />
+                  <input type="radio" id="first-rate1" name="review[rating]" value="1" />
+                  <label for="first-rate1" title="Terrible">1 star</label>
+                  <input type="radio" id="first-rate2" name="review[rating]" value="2" />
+                  <label for="first-rate2" title="Not good">2 stars</label>
+                  <input type="radio" id="first-rate3" name="review[rating]" value="3" />
+                  <label for="first-rate3" title="Average">3 stars</label>
+                  <input type="radio" id="first-rate4" name="review[rating]" value="4" />
+                  <label for="first-rate4" title="Very good">4 stars</label>
+                  <input type="radio" id="first-rate5" name="review[rating]" value="5" />
+                  <label for="first-rate5" title="Amazing">5 stars</label>
+                </fieldset>
+              </div>
+              <div class="mt-2">
+                <label for="comment" class="form-label">Comment</label>
+                <textarea name="review[comment]" id="comment" cols="5" placeholder="Write a comment"
+                  class="form-control " required></textarea>
+                <div class="invalid-feedback">Please leave a comment</div>
+                <br>
+                <button class="btn btn-outline-dark">Submit</button>
+              </div>
+            </form>
+            <%}%>
+
+
+              <% if(showall.reviews.length>0){%>
+
+                <div class="row">
+                  <hr>
+                  <p><b>All Reviews</b></p>
+                  <% for(review of showall.reviews){ %>
+                    <div class="card col-5 ms-3 mb-1 card-review">
+                      <div class="card-body">
+                        <h6 class="card-title mt-1">@<%=review.author.username%>
+                        </h6>
+                        <p class="starability-result star-small card-text" data-rating="<%=review.rating%>"></p>
+                        <p class="card-text mb-1">
+                          <%=review.comment%>
+                        </p>
+                        <%if(review.author && reqUser && review.author._id.equals(reqUser._id)){%>
+                          <form class="mb-2" method="post"
+                            action="/listings/<%=showall._id%>/reviews/<%=review._id%>?_method=DELETE">
+                            <button class="btn btn-sm btn-dark">Delete</button>
+                          </form>
+                          <%}%>
+                      </div>
+                    </div>
+                    <%}%>
+                </div>
+                <% } %>
+        </div>
+        <div class="col-8 offset-3 mb-3">
+          <h4>Where you'll be</h4>
+          <div id="map"></div>
+        </div>
+
+  </div>
+  <script src="/js/map.js"></script>
